test/error/scan/NumberTooBig.mod
MODULE NumberTooBig;

CONST n = 2147483648;

END NumberTooBig.
